密码验证部分

--- a/meituan/src/static/regist.html
+++ b/meituan/src/static/regist.html
@@ -55,14 +55,14 @@
 						<div></div>
 					</div>
 					<label>创建密码</label>
-					<input type='password' class='f-text'>
+					<input type='password' class='f-text' id='creapass'>
 					<span class='inline-tip'>
 						<i class='tipstatus'></i>请填写密码
 					</span>
 				</div>
 				<div class='form-field u-pwd2'>
 					<label>确认密码</label>
-					<input type='password' class='f-text'>
+					<input type='password' class='f-text' id='checkpass'>
 					<span class='inline-tip'>
 						<i class='tipstatus'></i>请再次输入密码
 					</span>
