网银支付修改

--- a/meituan/src/static/pay.html
+++ b/meituan/src/static/pay.html
@@ -98,74 +98,69 @@
 								</label>
 							</li>
 							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
+								<input type='radio' id='bob' name='ebank'>
+								<label for='bob' class='icon'>
 									<img src='images/pay/bob.png'>
 								</label>
 							</li>
 							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
+								<input type='radio' id='boc' name='ebank'>
+								<label for='boc' class='icon'>
 									<img src='images/pay/boc.png'>
 								</label>
 							</li>
 							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
+								<input type='radio' id='bofc' name='ebank'>
+								<label for='bofc' class='icon'>
 									<img src='images/pay/bofc.png'>
 								</label>
 							</li>
 							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
+								<input type='radio' id='cebb' name='ebank'>
+								<label for='cebb' class='icon'>
 									<img src='images/pay/cebb.png'>
 								</label>
 							</li>
+							
 							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
-									<img src='images/pay/cebb.png'>
-								</label>
-							</li>
-							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
+								<input type='radio' id='cib' name='ebank'>
+								<label for='cib' class='icon'>
 									<img src='images/pay/cib.png'>
 								</label>
 							</li>
 							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
+								<input type='radio' id='cmb' name='ebank'>
+								<label for='cmb' class='icon'>
 									<img src='images/pay/cmb.png'>
 								</label>
 							</li>
 							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
+								<input type='radio' id='cmbc' name='ebank'>
+								<label for='cmbc' class='icon'>
 									<img src='images/pay/cmbc.png'>
 								</label>
 							</li>
 							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
+								<input type='radio' id='gfyh' name='ebank'>
+								<label for='gfyh' class='icon'>
 									<img src='images/pay/gfyh.png'>
 								</label>
 							</li>
 							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
+								<input type='radio' id='pab_pc' name='ebank'>
+								<label for='pab_pc' class='icon'>
 									<img src='images/pay/pab_pc.png'>
 								</label>
 							</li>
 							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
+								<input type='radio' id='spdb' name='ebank'>
+								<label for='spdb' class='icon'>
 									<img src='images/pay/spdb.png'>
 								</label>
 							</li>
 							<li>
-								<input type='radio' id='ccb' name='ebank'>
-								<label for='ccb' class='icon'>
+								<input type='radio' id='zxyh' name='ebank'>
+								<label for='zxyh' class='icon'>
 									<img src='images/pay/zxyh.png'>
 								</label>
 							</li>
