网银支付修改

--- a/meituan/src/static/shop.html
+++ b/meituan/src/static/shop.html
@@ -511,7 +511,9 @@
 											<div class='left clearfix'>
 												<em class='discount'>7.5</em>
 												<a href=''>
-													<img src='images/shop/carou1.jpg'>
+													<div class='img'>
+														<img src='images/shop/carou1.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>小鲜肉锡箔花甲</a>
@@ -524,7 +526,9 @@
 											<div class='right clearfix'>
 												<em class='discount'>7.5</em>
 												<a href=''>
-													<img src='images/shop/carou2.jpg'>
+													<div class='img'>
+														<img src='images/shop/carou2.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>汉丽轩烤肉自助餐厅</a>
@@ -539,7 +543,9 @@
 											<div class='left clearfix'>
 												<em class='discount'>8.8</em>
 												<a href=''>
-													<img src='images/shop/carou3.jpg'>
+													<div class='img'>
+														<img src='images/shop/carou3.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>金诺郎韩式养生自助烤肉</a>
@@ -552,7 +558,9 @@
 											<div class='right clearfix'>
 												<em class='discount'>9</em>
 												<a href=''>
-													<img src='images/shop/carou4.jpg'>
+													<div class='img'>
+														<img src='images/shop/carou4.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>星象师饭吧</a>
@@ -567,7 +575,9 @@
 											<div class='left clearfix'>
 												<em class='discount'>7.5</em>
 												<a href=''>
+													<div class='img'>
 													<img src='images/shop/carou5.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>欧式饼屋</a>
@@ -580,7 +590,9 @@
 											<div class='right clearfix'>
 												<em class='discount'>1.6</em>
 												<a href=''>
-													<img src='images/shop/carou6.jpg'>
+													<div class='img'>
+														<img src='images/shop/carou6.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>云雅阙博物馆主题餐厅</a>
@@ -595,7 +607,9 @@
 											<div class='left clearfix'>
 												<em class='discount'>5.1</em>
 												<a href=''>
-													<img src='images/shop/carou7.jpg'>
+													<div class='img'>
+														<img src='images/shop/carou7.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>好食寨海鲜自助火锅</a>
@@ -608,7 +622,9 @@
 											<div class='right clearfix'>
 												<em class='discount'>4.4</em>
 												<a href=''>
-													<img src='images/shop/carou8.jpg'>
+													<div class='img'>
+														<img src='images/shop/carou8.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>木之义蛋糕</a>
@@ -623,7 +639,9 @@
 											<div class='left clearfix'>
 												<em class='discount'>8.2</em>
 												<a href=''>
-													<img src='images/shop/carou9.jpg'>
+													<div class='img'>
+														<img src='images/shop/carou9.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>桃太郎の屋</a>
@@ -636,7 +654,9 @@
 											<div class='right clearfix'>
 												<em class='discount'>6.6</em>
 												<a href=''>
-													<img src='images/shop/carou10.jpg'>
+													<div class='img'>
+														<img src='images/shop/carou10.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>斗十千精细日本料理</a>
@@ -651,7 +671,9 @@
 											<div class='left clearfix'>
 												<em class='discount'>5.8</em>
 												<a href=''>
-													<img src='images/shop/carou11.jpg'>
+													<div class='img'>
+														<img src='images/shop/carou11.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>解放碑威斯汀酒店 思悦兹</a>
@@ -664,7 +686,9 @@
 											<div class='right clearfix'>
 												<em class='discount'>6.9</em>
 												<a href=''>
-													<img src='images/shop/carou12.jpg'>
+													<div class='img'>
+														<img src='images/shop/carou12.jpg'>
+													</div>
 												</a>
 												<div class='title'>
 													<a href='' class='link'>味我可遇日式料理</a>
