部分页面添加分类导航

--- a/meituan/src/static/shop.html
+++ b/meituan/src/static/shop.html
@@ -468,7 +468,7 @@
 								<div class='content-cell cell-area'>
 									<h3>
 										<i class='iconfont icon-place'></i>
-										<span class='celtit'>热门团购</span>
+										<span class='celtit'>热门区域</span>
 									</h3>
 									<div class='strip'>
 										<ul class='strip-list'>
