--- a/meituan/src/static/speshop.html
+++ b/meituan/src/static/speshop.html
@@ -171,8 +171,8 @@
 			</div>
 		</div>
 		<div class='m-lnav'>
-			<div class='u-ltnav clearfix'>
-			    <div class='fl left'>
+			<div class='u-ltnav'>
+			    <div class='left'>
 					<span class='clasify'>全部分类</span>
 					<i class='iconfont icon-jiantouxia' id='iconfontjiao'></i>
 					<div class='u-navbox' id='unavbox'>
@@ -417,7 +417,6 @@
 										<li class='conitem'><a href=''>祛痘</a></li>
 										<li class='conitem'><a href=''>纹身</a></li>
 									</ul>
-
 								</div>
 							</div>
 						</div>
@@ -430,7 +429,7 @@
 						</div>
 					</div>
 				</div>
-				<div class='u-rnav fl'>
+				<div class='u-rnav'>
 					<ul class='u-linenav'>
 						<li class='nav-bar'><a href='' class='navitem'>首页</a></li>
 						<li class='nav-bar'><a href='' class='navitem'>今日新单</a></li>
@@ -444,10 +443,8 @@
 	</div>
 	<div class='g-main'>
 		<div class='m-bdw clearfix'>
-			<div class='u-tit'>
-				
-			</div>
-			<div class='u-topcontain clearfix'>
+			
+			<div class='u-topcontain'>
 				<div class='headline fl'>
 					<div class='head-tit clearfix'>
 						<span class='tit-componentl fl'>【三峡广场】</span>
