--- a/meituan/src/static/submitorder.html
+++ b/meituan/src/static/submitorder.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src = "js/jquery.min.js"></script>
 	<script type="text/javascript" src = "js/btn.js"></script>
 	<script type="text/javascript" src= "js/checkbox.js"></script>
-	
+	<script type="text/javascript" src='js/submitorder.js'></script>
 </head>
 <body>
 	<div class='g-head'>
@@ -157,7 +157,7 @@
                 					</a>
 								</td>
 								<td class='price'>
-									￥<span>10.8</span>
+									￥<span id='permoney'>10.8</span>
 								</td>
 								<td class='quantity number'>
 									<div class='quantity-box'>
@@ -168,7 +168,7 @@
 								</td>
 								<td class='total orange'>
 								    ￥
-									<span  class=''>10.8</span>
+									<span  id='amountmoney'>10.8</span>
 								</td>
 							</tr>
 							<tr class='discount'>
@@ -207,7 +207,7 @@
 									<strong>应付金额</strong>
 									<span class='orange'>
 										￥
-										<strong>10.80</strong>
+										<strong id='allmoney'>10.80</strong>
 									</span>
 								</td>
 							</tr>
