--- a/meituan/src/static/login.html
+++ b/meituan/src/static/login.html
@@ -21,31 +21,35 @@
 			<img src="images/left.jpg">	
 		</div>
 		<div class="m-login">
-			<form>
-				<div class="u-remind">
-					
+			<form id='loginform'>
+				<div class="u-remind" id='remind'>
+					<i class='tip-status'></i>
+					<span class='text'>请输入账号</span>
 				</div>
 				<div class="u-title">
 					<span>账号登录</span>
 					<a href="##" class="fr" id='mologin'>手机动态码登录<i class='ico'></i></a>
 				</div>
-				<div class="u-user">
+				<div class="u-user" id='usernamebox'>
 					<i class="avatar"></i>
 					<input type="text" id="userName" placeholder="手机号/用户名/邮箱">
 				</div>
-				<div class="u-verify">
+				<div class="u-verify" id='verify'>
 					<i class='icon'></i>
-					<input type='text' placeholder='验证码' class='verm'>
+					<input type='text' placeholder='验证码' class='verm' id='picverm'>
 					<img src='' class='verimg'>
 					<a href=''>看不清？换一张</a>
 				</div>
-				<div class='u-vernum'>
-					<input type='button' value='免费获取手机动态码' class='btn verbtn'>
-					<span class='getinfo'>已发送，一分钟后可获取</span>
-				</div>
-				<div class="u-user">
+				
+				<div class="u-user" id='passwordbox'>
 					<i class="pass"></i>
 					<input type="password" id="userPass" placeholder="密码">
+					<div class='u-vernum' id='u-vernum'>
+						<input type='button' value='免费获取手机动态码' class='verbtn' id='verbtn'>
+					</div>
+				</div>
+				<div class='tipinfo' id='tipinfo'>
+					<span>请获取动态码</span>
 				</div>
 				<div class="u-autologin">
 					<input type="checkbox" id="autoLogin" name= "" class="checkice">
@@ -53,7 +57,7 @@
 					<a href="##" class="fdp"> 忘记密码？</a>
 				</div>
 				<div class="u-commit">
-					<input type="submit" value="登录" class="btn">
+					<input type="submit" value="登录" class="btn" id='submitbtn'>
 				</div>
 				<p class='u-regst'><span>还没有账号？</span><a href='##'>免费注册</a></p>
 			</form>
